...
                                            <visualEffectView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wjG-ni-RlG">
                                                <rect key="frame" x="0.0" y="0.0" width="300" height="50"/>
                                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="qmQ-Vq-dvY">
                                                    <rect key="frame" x="0.0" y="0.0" width="300" height="50"/>
                                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                    <subviews>
                                                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="My Location" textAlignment="natural" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="jlg-5m-h2o">
                                                            <rect key="frame" x="4" y="4" width="292" height="42"/>
                                                            <constraints>
                                                                <constraint firstAttribute="height" constant="42" id="mwC-io-WKW"/>
                                                            </constraints>
                                                            <nil key="textColor"/>
                                                            <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
...
                                        </imageView>
                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vPL-VT-WZO">
                                            <rect key="frame" x="327" y="8" width="40" height="43"/>
                                            <subviews>
                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="B9T-uI-NeE">
                                                    <rect key="frame" x="5" y="0.0" width="30" height="43"/>
                                                    <state key="normal" title="Set"/>
                                                    <connections>
                                                        <action selector="tapSetButton:" destination="dDR-3Y-Tip" eventType="touchUpInside" id="5Xu-lZ-rCB"/>
                                                    </connections>
                                                </button>
                                            </subviews>
                                            <color key="backgroundColor" red="0.20716272294521332" green="0.47301200032234192" blue="0.96087658405303955" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
...
                                <subviews>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HlQ-KO-hjw">
                                        <rect key="frame" x="0.0" y="0.0" width="100" height="43"/>
                                        <constraints>
                                            <constraint firstAttribute="width" constant="100" id="OUL-rP-2fk"/>
                                        </constraints>
                                        <state key="normal" title="Start"/>
                                        <connections>
                                            <action selector="start" destination="Mb3-Ca-dwk" eventType="touchUpInside" id="JqF-hd-IMZ"/>
                                        </connections>
                                    </button>
                                </subviews>
                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
...
                        <subviews>
                            <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="mos-2x-vJb">
                                <rect key="frame" x="16" y="10" width="343" height="60"/>
                                <subviews>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="K7w-GZ-FhA">
                                        <rect key="frame" x="0.0" y="0.0" width="50" height="60"/>
                                        <state key="normal" image="Delete"/>
                                        <connections>
                                            <action selector="stop" destination="wQj-hZ-OZt" eventType="touchUpInside" id="JcN-rA-UiI"/>
                                        </connections>
                                    </button>
                                    <stackView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="249" verticalHuggingPriority="249" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="QRd-wy-52w">
                                        <rect key="frame" x="58" y="0.0" width="227" height="60"/>
...
                                                <nil key="highlightedColor"/>
                                            </label>
                                        </subviews>
                                    </stackView>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="i0T-QS-fvr">
                                        <rect key="frame" x="293" y="0.0" width="50" height="60"/>
                                        <state key="normal" image="Speaker"/>
                                        <state key="selected" image="Mute"/>
                                        <connections>
                                            <action selector="mute" destination="wQj-hZ-OZt" eventType="touchUpInside" id="c1H-hc-SHk"/>
                                        </connections>
                                    </button>
                                </subviews>
...
